# docs/swagger.yaml
@@ -72,42 +72,6 @@ paths:
       tags:
       - database
   /users:
-    delete:
-      description: Deletes the user where ID is passed in the user_id header
-      parameters:
-      - description: User ID to delete
-        in: header
-        name: user_id
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: Successfull deletion returns the model of the deleted user
-          schema:
-            $ref: '#/definitions/userModel.UserDTO'
-        "400":
-          description: Missing or invalid user ID header
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-        "404":
-          description: User not found
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-        "500":
-          description: Internal server error
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-      summary: Deletes the user with the specified ID
-      tags:
-      - users
     get:
       description: Gets all the users
       produces:
@@ -157,6 +121,124 @@ paths:
               type: string
             type: object
       summary: Creates a new user
+      tags:
+      - users
+  /users/id:
+    delete:
+      description: Deletes the user where ID is passed in the user_id header
+      parameters:
+      - description: User ID to delete
+        in: header
+        name: user_id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Successfull deletion returns the model of the deleted user
+          schema:
+            $ref: '#/definitions/userModel.UserDTO'
+        "400":
+          description: Missing or invalid user ID header
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "404":
+          description: User not found
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Internal server error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Deletes the user with the specified ID
+      tags:
+      - users
+    get:
+      description: Gets the user where ID is passed in the user_id header
+      parameters:
+      - description: User ID to retrieve
+        in: header
+        name: user_id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Returns the requested user
+          schema:
+            $ref: '#/definitions/userModel.UserDTO'
+        "400":
+          description: Missing or invalid user ID header
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "404":
+          description: User not found
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Internal server error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Returns the user with the specified ID
+      tags:
+      - users
+    put:
+      consumes:
+      - application/json
+      description: Updates the user where ID is passed in the user_id header with
+        the provided details
+      parameters:
+      - description: User ID to update
+        in: header
+        name: user_id
+        required: true
+        type: string
+      - description: User update details
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/userModel.UserDTO'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Successfully updated user
+          schema:
+            $ref: '#/definitions/userModel.UserDTO'
+        "400":
+          description: Missing or invalid user ID header or invalid request body
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "404":
+          description: User not found
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Internal server error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Updates the user with the specified ID
       tags:
       - users
 swagger: "2.0"
